header terminado, comienzo de body

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 <body>
     <!-- header starts here-->
 <header>
+
+    <div id="menu-bar" class="fas fa-bars"></div>
+
     <a href="#" class="logo"><span>T</span>RAVEL</a>
     
     <nav class="navbar">
@@ -45,7 +48,7 @@
 
     <div class="login-form-container">
 
-        <i class="fas fa-time" id="form-close"></i>
+        <i class="fas fa-times" id="form-close"></i>
 
         <form action="">
             <h3>Login</h3>
@@ -60,7 +63,16 @@
 
     </div>
 
+<!-- home section starts here-->
 
+<section class="home" id="home">
+
+
+
+
+</section>
+
+<!-- home section ends here-->
 
 <!-- custom js file link-->
     <script src="js/script.js"></script>
