Agregado de videos

--- a/index.html
+++ b/index.html
@@ -67,8 +67,23 @@
 
 <section class="home" id="home">
 
+    <div class="content">
+        <h3>La aventura vale la pena</h3>
+        <p>Descubra nuevos lugares con nosotros</p>
+        <a href="#" class="btn">Descubra mas</a>
+    </div>
 
+    <div class="controls">
+        <span class="vid-btn  active" data-src="images/vid-1.mp4"></span>
+        <span class="vid-btn" data-src="images/vid-2.mp4"></span>
+        <span class="vid-btn" data-src="images/vid-3.mp4"></span>
+        <span class="vid-btn" data-src="images/vid-4.mp4"></span>
+        <span class="vid-btn" data-src="images/vid-5.mp4"></span>
+    </div>
 
+    <div class="video-container">
+        <video src="images/vid-1.mp4" id="video.slider" loop autoplay muted></video>
+    </div>
 
 </section>
 
